add G1GC settings